--- a/tests/test.tex
+++ b/tests/test.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{pb-diagram}
+\pagestyle{empty}
 
 % doesn't expand macros outside of math mode??
 \newcommand{\custommacro}[1]{\langle #1 \rangle}
